[package]
name = "ppm"
version = "0.1.0"
authors = ["Pauline Rouvel, Alexandre Champaud, Mouna Hichri"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ppm"
crate-type = ["dylib"]

[dependencies]
rand = "0.7.2"
libc = "0.2"
cfile = "0.5.1"
bencher = "0.1.5"
termion = "1.5.5"